--- a/t-rex/css-t-rex/style.css
+++ b/t-rex/css-t-rex/style.css
@@ -5,8 +5,6 @@
             color: #585858;
             }
             body {
-            background-color: #f7f7f7;
-            color: #585858;
             font-size: 125%;
             font-family: Trebuchet MS,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Tahoma,sans-serif;
             }
@@ -14,6 +12,20 @@
             background-color: rgb(206, 52, 38);
             color: white;
             }
+            button{
+                background: royalblue;
+                border-radius: 4px;
+                color: white;
+                cursor: pointer;
+                height: 30px;
+            }
+
+            button:hover{
+                cursor: pointer;
+                background-color: rgb(72, 136, 255);
+            }
+
+            /*
             button {
             background: rgb(76, 142, 250);
             border: 0;
@@ -38,6 +50,7 @@
             button:hover {
             box-shadow: 0 1px 3px rgba(0, 0, 0, .50);
             }
+            */
             .debugging-content {
             line-height: 1em;
             margin-bottom: 0;
@@ -89,8 +102,9 @@
             box-sizing: border-box;
             font-size: 1em;
             line-height: 1.6em;
-            margin: 50px auto 0;
-            max-width: 600px;
+            margin-top: 11%;
+            margin-left: 26%;
+            max-width: 40%;
             width: 100%;
             }
             #malware-opt-in {
